# posecheck-fast

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: auto-release.yml  bump-version.yml  ci.yml  python-publish.yml  release.yml
src/posebench_fast/: __init__.py
src/posebench_fast/datasets/: __init__.py
src/posebench_fast/filters/: __init__.py  fast_filters.py
src/posebench_fast/metrics/: __init__.py  aggregation.py  rmsd.py
src/posebench_fast/utils/: __init__.py
src/posecheck_fast/: __init__.py
tests/: __init__.py  test_fast_filters.py  test_rmsd.py
