[project]
name = "posebench-fast"
version = "0.1.0"
description = "Fast docking evaluation metrics: symmetry-corrected RMSD and PoseBusters filters"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Nikolenko" }
]
keywords = ["docking", "rmsd", "posebusters", "molecular-docking", "benchmark"]

dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "spyrmsd>=0.6",
    "rdkit>=2022.03",
    "torch>=1.10",
    "posebusters>=0.2",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/posebench_fast"]

[tool.hatch.build.targets.sdist]
include = ["src/posebench_fast"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
