[project]
name = "posebench-fast"
version = "0.1.4"
description = "Fast docking evaluation metrics: symmetry-corrected RMSD and PoseBusters filters"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Nikolenko" }
]
keywords = ["docking", "rmsd", "posebusters", "molecular-docking", "benchmark"]

dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "spyrmsd>=0.6",
    "rdkit>=2022.03",
    "torch>=1.10",
    "posebusters>=0.2",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "posebench_fast"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "pre-commit>=4.0",
]

[tool.ruff]
src = ["src/"]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes (undefined names, unused imports, etc.)
    "W",    # pycodestyle warnings
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade (modernize Python code)
    "B",    # flake8-bugbear (common bugs)
    "C4",   # flake8-comprehensions
    "PIE",  # flake8-pie (misc lints)
    "RET",  # flake8-return (return statement improvements)
    "SIM",  # flake8-simplify
    "NPY",  # NumPy-specific rules
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "E741",   # Ambiguous variable name (allow 'l', 'O', etc. for math)
    "N803",   # Argument name should be lowercase (allow CamelCase for classes)
    "N806",   # Variable should be lowercase (allow uppercase in math/ML code)
    "B008",   # Do not perform function call in argument defaults (common in ML)
    "RET504", # Unnecessary variable assignment before return
    "SIM108", # Use ternary operator (can reduce readability)
    "SIM102", # Avoid assigning lambda expressions (OK for ML configs)
    "N812",   # Lowercase imported as non-lowercase (allow for 'import torch.nn.functional as F')
    "N802",   # Function name should be lowercase (allow for class-factory style)
    "E731",   # Do not assign a lambda expression (allow in configs/utilities)
    "C408",   # Unnecessary 'dict' call (allow for explicitness)
    "SIM113", # Use 'any'/'all' for simple comparisons (allow explicit loops)
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "numpy"
